--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
  <head>
  </head>
  <body>
-   <h1>Hello World, Nice to meet you<h1>
+  <center><img src="/images/logo.jpg" alt="logo"></center>
  </body>
 </html>
