--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://roberthunt.com/css/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel">
 <style>
-body,h1 {font-family: "Roboto", sans-serif}
+body,h1 {font-family: "Cinzel", sans-serif}
 body, html {height: 100%}
 .bgimg {
   background-image: url('/images/landsend.jpg');
