--- a/index.html
+++ b/index.html
@@ -1,34 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Robert Hunt</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://roberthunt.com/css/w3.css">
+<title>Robert Hunt Photography</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel">
+</head>
 <style>
-body,h1 {font-family: "Cinzel", sans-serif}
-body, html {height: 100%}
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
 .bgimg {
   background-image: url('/images/landsend.jpg');
-  min-height: 100%;
+  height: 100%;
   background-position: center;
   background-size: cover;
+  position: relative;
+  color: white;
+  font-family: "Cinzel";
+  font-size: 15px;
+}
+
+.topright {
+  position: absolute;
+  top: 0;
+  right: 10px;
+}
+
+.bottomleft {
+  position: absolute;
+  bottom: 0;
+  left: 16px;
+}
+
+.middle {
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  transform: translate(40%, -10%);
+  text-align: center;
 }
 </style>
-</head>
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+<div class="bgimg">
+  <div class="topright">
+    <p>huntphotog (at) gmail.com</p>
+  </div>
+  <div class="middle">
+    <h1>Robert Hunt Photography</h1>
+    
     
   </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Robert Hunt</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"></p>
+  <div class="bottomleft">
+    <p></p>
   </div>
-  </div>
+</div>
+
 
 </body>
 </html>
