--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Robert Hunt Photography</title>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100&display=swap" rel="stylesheet">
 </head>
 <style>
 body, html {
@@ -16,14 +18,14 @@ body, html {
   background-size: cover;
   position: relative;
   color: white;
-  font-family: "Cinzel";
-  font-size: 15px;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-size: 25px;
 }
 
-.topright {
+.topleft {
   position: absolute;
-  top: 15%;
-  right: 10px;
+  top: 0;
+  left: 16px;
 }
 
 .bottomleft {
@@ -34,31 +36,45 @@ body, html {
 
 .middle {
   position: absolute;
-  top: 10%;
-  left: 40%;
-  transform: translate(65%, -10%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
+.middle2 {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 
-
+hr {
+  margin: auto;
+  width: 40%;
+}
 </style>
 <body>
 
 <div class="bgimg">
-  <div class="topright">
-    <p>huntphotog (at) gmail.com</p>
+  <div class="topleft">
+    <p>Logo</p>
+  </div>
+  <div class="middle2">
+  <center>
+  <img src="/images/rh1.png"  width="100" height="70" alt="Logo">
+  </center>
   </div>
   <div class="middle">
     <h1>Robert Hunt Photography</h1>
-    
-    
+    <hr>
+    <p>huntphotog (at) gmail.com</p>
   </div>
   <div class="bottomleft">
     <p></p>
   </div>
 </div>
-
 
 </body>
 </html>
