--- a/index.html
+++ b/index.html
@@ -5,16 +5,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100&display=swap" rel="stylesheet">
-<script>
- function disableClick(){
- document.onclick=function(event){
- if (event.button == 2) {
- alert('Page Source Not Available');
- return false;
- }
- }
- }
- </script>
 </head>
 <style>
 body, html {
@@ -66,7 +56,7 @@ hr {
   width: 40%;
 }
 </style>
-<body onLoad="disableClick()">
+<body>
 
 <div class="bgimg">
   <div class="topleft">
