--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=.5" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100&display=swap" rel="stylesheet">
 </head>
 <style>
 body, html {
@@ -13,69 +10,19 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('/images/landsend.jpg');
+  background-image: url('/images/landsend0b.jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
   position: relative;
-  color: white;
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  font-size: 25px;
+  
 }
 
-.topleft {
-  position: absolute;
-  top: 0;
-  left: 16px;
-}
 
-.bottomleft {
-  position: absolute;
-  bottom: 0;
-  left: 16px;
-}
-
-.middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.middle2 {
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
-}
 </style>
 <body>
 
-<div class="bgimg">
-  <div class="topleft">
-    <p></p>
-  </div>
-  <div class="middle2">
-  <center>
-  <img src="/images/rh1.png"  width="100" height="70" alt="Logo">
-  </center>
-  </div>
-  <div class="middle">
-    <h1>Robert Hunt Photography</h1>
-    <hr>
-    <p>huntphotog (at) gmail.com</p>
-  </div>
-  <div class="bottomleft">
-    <p></p>
-  </div>
-</div>
+
 
 </body>
 </html>
