--- a/index.html
+++ b/index.html
@@ -3,26 +3,10 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=.5" />
 </head>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
 
-.bgimg {
-  background-image: url('/images/landsend0b.jpg');
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  
-}
-
-
-</style>
 <body>
 
-
+<img src="/images/landsend0b.jpg">
 
 </body>
 </html>
