--- a/index.html
+++ b/index.html
@@ -125,5 +125,6 @@ h1 {
   <div class="slideshow-image" style="background-image: url('/images/bigsur.jpg/1600x1400')"></div>
   <div class="slideshow-image" style="background-image: url('/images/arches.jpg/1600x1400')"></div>
 </div>
+    </div>
   </body>
 </html>
