--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-  <style class="INLINE_PEN_STYLESHEET_ID">
+  <style>
     .slideshow {
   position: absolute;
   width: 100vw;
