--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 
   <meta charset="UTF-8">
   
-<link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
-<meta name="apple-mobile-web-app-title" content="CodePen">
+
 
 <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
 
@@ -278,11 +277,11 @@ h1 small:last-child {
 </head>
 
 <body translate="no" >
-  <h1><small>Photogrpaher</small> Robert Hunt <small>huntphotog(at)gmail.com/small></h1>
+  <h1><small>Photogrpaher</small> Robert Hunt <small>huntphotog(at)gmail.com</small></h1>
 
 <!-- You can add more ".slideshow-image" elements, but remember to update the "$items" variable on SCSS -->
 <div class="slideshow">
-  <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=901')"></div>
+  <div class="slideshow-image" style="background-image: url('https://roberthunt.com/landsend.jpg')"></div>
   <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=902')"></div>
   <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=903')"></div>
   <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=904')"></div>
