--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ h1 {
   font-weight: 300;
   text-transform: uppercase;
   background-color: rgba(255, 255, 255, 0.75);
-  box-shadow: 0 1em 2em -1em rgba(0, 0, 0, 0.5);
+  box-shadow: 0 1em 2em -1em rgba(0, 0, 0, 0.15);
   padding: 1em 2em;
   line-height: 1.5;
 }
@@ -277,7 +277,7 @@ h1 small:last-child {
 </head>
 
 <body translate="no" >
-  <h1><small>Photogrpaher</small> Robert Hunt <small>huntphotog(at)gmail.com</small></h1>
+  <h1><small>Photographer</small> Robert Hunt <small>huntphotog(at)gmail.com</small></h1>
 
 <!-- You can add more ".slideshow-image" elements, but remember to update the "$items" variable on SCSS -->
 <div class="slideshow">
