--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ h1 small:last-child {
 
 <!-- You can add more ".slideshow-image" elements, but remember to update the "$items" variable on SCSS -->
 <div class="slideshow">
-  <div class="slideshow-image" style="background-image: url('https://roberthunt.com/landsend.jpg')"></div>
+  <div class="slideshow-image" style="background-image: url('https://roberthunt.com/images/landsend.jpg/1600x900')"></div>
   <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=902')"></div>
   <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=903')"></div>
   <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=904')"></div>
