--- a/index.html
+++ b/index.html
@@ -241,15 +241,15 @@ h1 {
   font-family: Raleway, sans-serif;
   font-weight: 300;
   text-transform: uppercase;
-  background-color: rgba(255, 255, 255, 0.75);
-  box-shadow: 0 1em 2em -1em rgba(0, 0, 0, 0.15);
+  background-color: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 1em 2em -1em rgba(0, 0, 0, 0.25);
   padding: 1em 2em;
   line-height: 1.5;
 }
 h1 small {
   display: block;
   text-transform: lowercase;
-  font-size: 0.7em;
+  font-size: 0.5em;
 }
 h1 small:first-child {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
@@ -281,8 +281,8 @@ h1 small:last-child {
 
 <!-- You can add more ".slideshow-image" elements, but remember to update the "$items" variable on SCSS -->
 <div class="slideshow">
-  <div class="slideshow-image" style="background-image: url('https://roberthunt.com/images/landsend.jpg/1600x900')"></div>
-  <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=902')"></div>
+  <div class="slideshow-image" style="background-image: url('https://roberthunt.com/images/landsend.jpg')"></div>
+  <div class="slideshow-image" style="background-image: url('https://roberthunt.com/images/glacierpt.jpg')"></div>
   <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=903')"></div>
   <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=904')"></div>
 </div>
