--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@ h1 small:last-child {
 <div class="slideshow">
   <div class="slideshow-image" style="background-image: url('https://roberthunt.com/images/landsend.jpg')"></div>
   <div class="slideshow-image" style="background-image: url('https://roberthunt.com/images/glacierpt.jpg')"></div>
-  <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=903')"></div>
-  <div class="slideshow-image" style="background-image: url('https://unsplash.it/1600/1400?image=904')"></div>
+  <div class="slideshow-image" style="background-image: url('https://roberthunt.com/images/arches.jpg')"></div>
+  <div class="slideshow-image" style="background-image: url('https://roberthunt.com/images/bandon.jpg')"></div>
 </div>
   
   
