--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@ h1 {
   text-align: center;
   font-family: Raleway, sans-serif;
   font-weight: 300;
+  color: white;
   text-transform: uppercase;
   background-color: rgba(255, 255, 255, 0.25);
   box-shadow: 0 1em 2em -1em rgba(0, 0, 0, 0.25);
