--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:300'>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Prata:300'>
   
 <style>
 .slideshow {
@@ -236,7 +236,7 @@ h1 {
   transform: translate3d(-50%, -50%, 0);
   z-index: 99;
   text-align: center;
-  font-family: Raleway, sans-serif;
+  font-family: Prata, sans-serif;
   font-weight: 300;
   color: white;
   text-transform: uppercase;
