--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@ h1 small {
   text-transform: lowercase;
   font-size: 0.5em;
 }
-h1 small:first-child {
+<!--h1 small:first-child {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   padding-bottom: 0.5em;
-}
+}-->
 h1 small:last-child {
-  border-top: 1px solid rgba(0, 0, 0, 0.25);
+  border-top: 1px solid rgba(255, 255, 255, 0.25);
   padding-top: 0.5em;
 }
 </style>
