--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="Description" CONTENT="Robert Hunt, Photographer: California, Colorado, Oregon, United States">
-<title>Robert Hunt - Photograher</title>
+<title>Robert Hunt - Photographer</title>
 <meta name="robots" content="noindex,nofollow">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
