--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,7 @@
        <div class="cbp-item film">
             <a href="https://vimeo.com/525943617" class="cbp-caption cbp-lightbox" data-title="Rincon del Mar">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/rincon.jpg" width="570" height="400" alt="Rincon del Mar">
+                    <img src="https://roberthunt.com/index.html/_include/img/work/thumbs/rincon.jpg" width="570" height="400" alt="Rincon del Mar">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -53,7 +53,7 @@
         <div class="cbp-item film">
             <a href="http://vimeo.com/254063821" class="cbp-caption cbp-lightbox" data-title="Francia<br>Bogota">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/francia.jpg" width="570" height="400" alt="Francia">
+                    <img src="https://roberthunt.com/index.html/_include/img/work/thumbs/francia.jpg" width="570" height="400" alt="Francia">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -68,7 +68,7 @@
         <div class="cbp-item film">
             <a href="http://vimeo.com/237007180" class="cbp-caption cbp-lightbox" data-title="Mi Mariposa">
                 <div class="cbp-caption-defaultWrap">
-                    <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/horse.jpg" width="570" height="400" alt="Francia">
+                    <img src="https://roberthunt.com/index.html/_include/img/work/thumbs/horse.jpg" width="570" height="400" alt="Francia">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
@@ -81,7 +81,7 @@
             </a>
         </div>
         <div class="cbp-item photo">
-            <a href="https://roberthunt.com/index2.html/_include/img/work/full/pano_full.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Big Sur<br>Big Sur California">
+            <a href="https://roberthunt.com/index.html/_include/img/work/full/pano_full.jpg" class="cbp-caption cbp-lightbox" data-title="Evening at Big Sur<br>Big Sur California">
                 <div class="cbp-caption-defaultWrap">
                     <img src="https://roberthunt.com/index2.html/_include/img/work/thumbs/pano_t.jpg" width="570" height="400" alt="Big Sur California">
                 </div>
