--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Robert Hunt Film and Photography</title>
-
+    <meta name="Description" CONTENT="Robert Hunt, Photographer: California, Colorado, Oregon, United States">
+    <meta name="robots" content="noindex,nofollow">
     <!-- load fonts from google -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,700%7CRoboto:400,500,700%7CRoboto+Condensed%7CLato:400,700" rel="stylesheet" type="text/css">
 
