--- a/index.html
+++ b/index.html
@@ -397,6 +397,6 @@
     <script type="text/javascript" src="https://roberthunt.com/stage/js/main.js"></script>
 	
 	
-	
+	<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Froberthunt.com&count_bg=%23BFC2BD&title_bg=%23FDFCFC&icon=&icon_color=%23E7E7E7&title=&edge_flat=false"/></a>
 </body>
 </html>
