--- a/index.html
+++ b/index.html
@@ -391,5 +391,7 @@
 	
 	
 	<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Froberthunt.com&count_bg=%23BFC2BD&title_bg=%23FDFCFC&icon=&icon_color=%23E7E7E7&title=&edge_flat=false"/></a>
-</body>
+ <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c25b828d6eeea000a3da961559f2ac2ace2bd234'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/941892/t/3"></script>
+	</body>
 </html>
