--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
             </a>
         </div>
         <div class="cbp-item film">
-            <a href="https://www.youtube.com/watch?v=VBS1G2Clhz8&t=9s" class="cbp-caption cbp-lightbox" data-title="Sophie<br>Flowers">
+            <a href="https://vimeo.com/12253791" class="cbp-caption cbp-lightbox" data-title="Sophie's<br>Flowers">
                 <div class="cbp-caption-defaultWrap">
                     <img src="https://roberthunt.com/_include/img/work/thumbs/sophie_t.jpg" width="570" height="400" alt="Sophie">
                 </div>
                 <div class="cbp-caption-activeWrap">
                     <div class="cbp-l-caption-alignCenter">
                         <div class="cbp-l-caption-body">
-                            <div class="cbp-l-caption-desc">Sophie</div>
+                            <div class="cbp-l-caption-desc">Sophies</div>
                             <div class="cbp-l-caption-desc">Flowers</div>
                         </div>
                     </div>
