--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </a>
         </div>
 		<div class="cbp-item film">
-            <a href="https://www.youtube.com/watch?v=0RT1vP-MKBY" class="cbp-caption cbp-lightbox" data-title="Timelapse Dallas<br>Dallas, Texas">
+            <a href="https://vimeo.com/12642246" class="cbp-caption cbp-lightbox" data-title="Timelapse Dallas<br>Dallas, Texas">
                 <div class="cbp-caption-defaultWrap">
                     <img src="https://roberthunt.com/_include/img/work/thumbs/dallas_t.jpg" width="570" height="400" alt="Dallas Texas">
                 </div>
