--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </a>
         </div>
 		<div class="cbp-item film">
-            <a href="https://www.youtube.com/watch?v=Jv7PiJm5BvU" class="cbp-caption cbp-lightbox" data-title="Pump Jack<br>East Texas">
+            <a href="https://vimeo.com/13855282" class="cbp-caption cbp-lightbox" data-title="Pump Jack<br>East Texas">
                 <div class="cbp-caption-defaultWrap">
                     <img src="https://roberthunt.com/_include/img/work/thumbs/pump_t.jpg" width="570" height="400" alt="Pump Jack Van Texas">
                 </div>
