--- a/v1.stage.htm
+++ b/v1.stage.htm
@@ -12,20 +12,7 @@
 <style>.tk-ten-mincho-text{font-family:"ten-mincho-text",serif;}</style>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 		
-<style type="text/css">
-img.wp-smiley,
-img.emoji {
-	display: inline !important;
-	border: none !important;
-	box-shadow: none !important;
-	height: 1em !important;
-	width: 1em !important;
-	margin: 0 0.07em !important;
-	vertical-align: -0.1em !important;
-	background: none !important;
-	padding: 0 !important;
-}
-</style>
+
 <link rel="stylesheet" id="wp-block-library-css" href="v1.stage_files/style.min.css" type="text/css" media="all">
 <link rel="stylesheet" id="classic-theme-styles-css" href="v1.stage_files/classic-themes.min.css" type="text/css" media="all">
 <link rel="stylesheet" id="jquery-ui-smoothness-css" href="v1.stage_files/jquery-ui.min.css" type="text/css" media="screen">
@@ -63,7 +50,7 @@ img.emoji {
     <div class="slide" style="left: 0px;">
           <div class="column">
         <a href="#" style="cursor: pointer;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/sutter_f.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/sutter_f.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/sutter_f.jpg&quot;);"></span></figure>          <div class="textarea">
           <p class="by">ROBBINS</p>              <h2 class="title">EVENING AT SUTTER POND</h2>
 <p class="by">CALIFORNIA</p>          </div>
         </a>
@@ -71,68 +58,68 @@ img.emoji {
       <div class="column">
         <a href="#" onclick="return false;">
 
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/pano_full.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/pano_full.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/pano_full.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">BIG SUR</p>            <h2 class="title">EVENING AT BIG SUR</h2>            <p class="by">CALIFORNIA</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/landsend_full.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/landsend_full.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/landsend_full.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">BIG SUR</p>            <h2 class="title">LANDS END</h2>            <p class="by">CALIFORNIA</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/arches_f.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/arches_f.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/arches_f.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">MOAB</p>            <h2 class="title">ARCHES NATIONAL PARK</h2>            <p class="by">UTAH</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/nb_f.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/nb_f.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/nb_f.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">POINT REYES</p>            <h2 class="title">NORTH BEACH<br>
 </h2>            <p class="by">CALIFORNIA</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/dunes_f.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/dunes_f.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/dunes_f.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">SAN LUIS VALLEY</p>            <h2 class="title">GREAT SAND DUNES</h2>            <p class="by">COLORADO</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/bandon_f.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/bandon_f.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/bandon_f.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">BANDON</p>            <h2 class="title">EVENING AT BANDON BEACH</h2>            <p class="by">OREGON</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/gg_f.png" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/gg_f.png&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/gg_f.png&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">COLORADO SPRINGS</p>            <h2 class="title">GARDEN OF THE GODS</h2>            <p class="by">COLORADO</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/pb_f.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/pb_f.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/pb_f.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">WELD COUNTY</p>            <h2 class="title">PAWNEE NATIONAL GRASSLANDS</h2>            <p class="by">COLORADO</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/glacier_full.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/glacier_full.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/glacier_full.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">YOSIMITE</p>            <h2 class="title">EVENING AT HALF DOME</h2>            <p class="by">CALIFORNIA</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/neptune.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/neptune.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/neptune.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">BIG SUR</p>            <h2 class="title">NEPTUNE BEACH</h2>            <p class="by">CALIFORNIA </p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
         <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" data-bg="https://roberthunt.com/_include/img/work/full/carmel_f.jpg" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/carmel_f.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/carmel_f.jpg&quot;);"></span></figure>          <div class="textarea">
             <p class="by case-study">CARMEL</p>            <h2 class="title">MORNING IN CARMEL</h2>            <p class="by">CALIFORNIA</p>          </div>
         </a>
       </div><!--  END:column -->
@@ -158,6 +145,5 @@ img.emoji {
 <script src="v1.stage_files/jquery.min.js"></script>
 <script src="v1.stage_files/jquery.libs.js" charset="utf-8"></script>
 <script src="v1.stage_files/ls.unveilhooks.min.js"></script>
-<script src="v1.stage_files/lazysizes.min.js"></script>
 <script src="v1.stage_files/common.js" charset="utf-8"></script>
 </body></html>
