--- a/v1.stage.htm
+++ b/v1.stage.htm
@@ -50,7 +50,7 @@
     <div class="slide" style="left: 0px;">
           <div class="column">
         <a href="#" style="cursor: pointer;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/sutter_f.jpg&quot;);"></span></figure>          <div class="textarea">
+                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/sutter_f.jpg&quot;); background-size: cover;"></span></figure>          <div class="textarea">
           <p class="by">ROBBINS</p>              <h2 class="title">EVENING AT SUTTER POND</h2>
 <p class="by">CALIFORNIA</p>          </div>
         </a>
