--- a/v1.stage.htm
+++ b/v1.stage.htm
@@ -128,7 +128,7 @@
       <div class="column">
         
                   <div class="textarea">
-            <div class="credit">Contact:</div>            <p class="by">huntphotog(at)gmail(dot)com</p>            <p class="by">&copy 2023 Robert Hunt Film & Photography</p>          </div>
+            <div class="credit"></div>            <p class="by">huntphotog(at)gmail(dot)com</p>            <p class="by">&copy 2023 Robert Hunt Film & Photography</p>          </div>
         </a>
       </div><!--  END:column -->
       
