--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Robert Hunt Film and Photography</title>
 <meta name="Description" CONTENT="Robert Hunt, Photographer: California, Colorado, Oregon, United States">
 <meta name="robots" content="noindex,nofollow">
-
+<meta http-equiv="Refresh" content="0; url='https://roberthunt.com/v1.stage.htm'" />
 <link rel="stylesheet" href="v1.stage_files/ywv1keb.css">
 <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
 <link href="v1.stage_files/common.css" rel="stylesheet" type="text/css">
@@ -131,7 +131,7 @@
       <div class="column">
         
                   <div class="textarea">
-            <div class="credit">Contact:</div>            <p class="by">huntphotog(at)gmail(dot)com</p>            <p class="by">&copy 2023 Robert Hunt Film & Photography</p>          </div>
+            <div class="credit"></div>            <p class="by">huntphotog(at)gmail(dot)com</p>            <p class="by">&copy 2023 Robert Hunt Film & Photography</p>          </div>
         </a>
       </div><!--  END:column -->
       
