--- a/v1.stage.htm
+++ b/v1.stage.htm
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<title>Robert Hunt Film and Photography</title>
+<meta name="Description" CONTENT="Robert Hunt, Photographer: California, Colorado, Oregon, United States">
+<meta name="robots" content="noindex,nofollow">
 
 <link rel="stylesheet" href="v1.stage_files/ywv1keb.css">
 <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
