--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <title>Robert Hunt Film and Photography</title>
-<meta name="Description" CONTENT="Robert Hunt, Photographer: California, Colorado, Oregon, United States">
-<meta name="robots" content="noindex,nofollow">
-<meta http-equiv="Refresh" content="0; url='https://roberthunt.com/v1.stage.htm'" />
+<meta name="Description" CONTENT="Robert Hunt, Film, Video, Photographer: California, Colorado, Oregon, United States">
+
 <link rel="stylesheet" href="v1.stage_files/ywv1keb.css">
 <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
 <link href="v1.stage_files/common.css" rel="stylesheet" type="text/css">
@@ -51,79 +50,77 @@
 <section id="top_slide" class="slide_block">
   <div class="slide_area">
     <div class="slide" style="left: 0px;">
-          <div class="column">
-        <a href="#" style="cursor: pointer;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/sutter_f.jpg&quot;); background-size: cover;"></span></figure>          <div class="textarea">
-          <p class="by">ROBBINS</p>              <h2 class="title">EVENING AT SUTTER POND</h2>
-<p class="by">CALIFORNIA</p>          </div>
+         
+        <div class="column">
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/sp.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">ROBBINS</p>            <h2 class="title">Evening at Sutter Pond</h2>            <p class="by">CALIFORNIA</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/pano_full.jpg&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">BIG SUR</p>            <h2 class="title">EVENING AT BIG SUR</h2>            <p class="by">CALIFORNIA</p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/bs_pano.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">big sur</p>            <h2 class="title">evening at rocky point</h2>            <p class="by">california</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/landsend_full.jpg&quot;);"></span></figure>          <div class="textarea">
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/le.jpg"> </span></figure>          <div class="textarea">
             <p class="by case-study">BIG SUR</p>            <h2 class="title">LANDS END</h2>            <p class="by">CALIFORNIA</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/arches_f.jpg&quot;);"></span></figure>          <div class="textarea">
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/arches_f.jpg"> </span></figure>          <div class="textarea">
             <p class="by case-study">MOAB</p>            <h2 class="title">ARCHES NATIONAL PARK</h2>            <p class="by">UTAH</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/nb_f.jpg&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">POINT REYES</p>            <h2 class="title">NORTH BEACH<br>
-</h2>            <p class="by">CALIFORNIA</p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/nb.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">point reyes</p>            <h2 class="title">north beach</h2>            <p class="by">california</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/dunes_f.jpg&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">SAN LUIS VALLEY</p>            <h2 class="title">GREAT SAND DUNES</h2>            <p class="by">COLORADO</p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/dunes.JPG"> </span></figure>          <div class="textarea">
+            <p class="by case-study">san luis valley</p>            <h2 class="title">the great sand dunes</h2>            <p class="by">colorado</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/bandon_f.jpg&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">BANDON</p>            <h2 class="title">EVENING AT BANDON BEACH</h2>            <p class="by">OREGON</p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/bandon.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">bandon</p>            <h2 class="title">storm over bandon beach</h2>            <p class="by">oregon</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/gg_f.png&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">COLORADO SPRINGS</p>            <h2 class="title">GARDEN OF THE GODS</h2>            <p class="by">COLORADO</p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/garden.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">colorado springs</p>            <h2 class="title">garden of the gods</h2>            <p class="by">colorado</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/pb_f.jpg&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">WELD COUNTY</p>            <h2 class="title">PAWNEE NATIONAL GRASSLANDS</h2>            <p class="by">COLORADO</p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/pb.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">weld county</p>            <h2 class="title">pawnee national grasslands</h2>            <p class="by">colorado</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/glacier_full.jpg&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">YOSIMITE</p>            <h2 class="title">EVENING AT HALF DOME</h2>            <p class="by">CALIFORNIA</p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/half.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">yosemite</p>            <h2 class="title">evening at half dome</h2>            <p class="by">california</p>          </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/neptune.jpg&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">BIG SUR</p>            <h2 class="title">NEPTUNE BEACH</h2>            <p class="by">CALIFORNIA </p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/nep.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">big sur</p>            <h2 class="title">neptune's beach</h2>            <p class="by">california</p>        </div>
         </a>
       </div><!--  END:column -->
       <div class="column">
-        <a href="#" onclick="return false;">
-                <figure><span class="image lazyloaded" style="background-image: url(&quot;https://roberthunt.com/_include/img/work/full/carmel_f.jpg&quot;);"></span></figure>          <div class="textarea">
-            <p class="by case-study">CARMEL</p>            <h2 class="title">MORNING IN CARMEL</h2>            <p class="by">CALIFORNIA</p>          </div>
+        <a href="#anp">
+                <figure><a name="anp"><span> <img src="https://roberthunt.com/_include/img/work/full/morning.jpg"> </span></figure>          <div class="textarea">
+            <p class="by case-study">carmel</p>            <h2 class="title">morning in carmel</h2>            <p class="by">california</p>          </div>
         </a>
       </div><!--  END:column -->
 
@@ -140,10 +137,6 @@
 </section>
 
 </div><!--  END:wrapper -->
-
-
-
-
 <script type="text/javascript" src="v1.stage_files/core.min.js" id="jquery-ui-core-js"></script>
 <script src="v1.stage_files/jquery.min.js"></script>
 <script src="v1.stage_files/jquery.libs.js" charset="utf-8"></script>
