--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="column">
         
                   <div class="textarea">
-            <div class="credit"><a href="https://vimeo.com/showcase/10474637" target="_blank">Film Showcase</a></div>            <p class="by">huntphotog(at)gmail(dot)com</p>            <p class="by">&copy 2023 Robert Hunt Film & Photography</p>          </div>
+            <div class="credit"><a href="https://vimeo.com/showcase/10474637/" target="_blank">Film Showcase</a></div>            <p class="by">huntphotog(at)gmail(dot)com</p>            <p class="by">&copy 2023 Robert Hunt Film & Photography</p>          </div>
         </a>
       </div><!--  END:column -->
       
