--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 <header id="header" class="block_header">
   <div class="inner">
     <div class="title"><a href="https://roberthunt.com/"><b>ROBERT HUNT FILM & PHOTOGRAPHY</b></a></div>
+    <ul class="menu">
+    <li><a href="https://roberthunt.com/film.htm"><span>Film Showcase</span></a></li>
+    </ul>
   </div>
 </header>
 
@@ -133,7 +136,7 @@
       <div class="column">
         
                   <div class="textarea">
-            <div class="credit"><a href="https://vimeo.com/showcase/10474637/" target="_blank">Film Showcase</a></div>            <p class="by">huntphotog(at)gmail(dot)com</p>            <p class="by">&copy 2023 Robert Hunt Film & Photography</p>          </div>
+            <div class="by"></div>            <p class="by">huntphotog(at)gmail(dot)com</p>            <p class="by">&copy 2023 Robert Hunt Film & Photography</p>          </div>
         </a>
       </div><!--  END:column -->
       
