--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <header id="header" class="block_header">
   <div class="inner">
-    <div class="title"><a href="https://roberthunt.com/">ROBERT HUNT FILM & PHOTOGRAPHY</a></div>
+    <div class="title"><a href="https://roberthunt.com/film.htm">ROBERT HUNT FILM & PHOTOGRAPHY</a></div>
     <ul class="menu">
     <li><a href="https://roberthunt.com/film.htm"><span>Film Showcase</span></a></li>
     </ul>
