--- a/film.htm
+++ b/film.htm
@@ -31,7 +31,7 @@
 
 <header id="header" class="block_header">
   <div class="inner">
-    <div class="title"><a href="https://roberthunt.com/"><b>ROBERT HUNT FILM & PHOTOGRAPHY</b></a></div>
+    <div class="title"><a href="https://roberthunt.com/">ROBERT HUNT FILM & PHOTOGRAPHY</a></div>
 	<ul class="menu">
       <li><a href="https://roberthunt.com/"><span>Photography Showcase</span></a></li>
     </ul>
