--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </p>
 
 <p style="text-align: left;">
-  <span style="font-family: 'courier new', courier, monospace; font-size: 12pt;"><center></center>This site is not ready. We're working on it. </center></span>
+  <span style="font-family: 'courier new', courier, monospace; font-size: 12pt;"><center>This site is not ready. We're working on it. </center></span>
 </p>
 
 </body>
