--- a/index.html
+++ b/index.html
@@ -1,29 +1,20 @@
-
 <!DOCTYPE html>
-<html lang="en" class="no-js" >
+<html>
 <head>
-
-
-</head>
-
-
-<body>
-
-<p style="text-align: center;">
-  <span style="font-family: 'courier new', courier, monospace; font-size: 36pt;"></span>
-</p>
-
-<p style="text-align: center;">
-  <span style="font-family: 'courier new', courier, monospace; font-size: 36pt;"></span>
-</p>
-
-<p style="text-align: center;">
-  <span style="font-family: 'courier new', courier, monospace; font-size: 36pt;">Robert Hunt</span>
-</p>
-
-<p style="text-align: left;">
-  <span style="font-family: 'courier new', courier, monospace; font-size: 12pt;"><center>This site is not ready. We're working on it. </center></span>
-</p>
-
-</body>
+<link href='https://fonts.googleapis.com/css?family=Bacasime Antique' rel='stylesheet'>
+<style>
+  body      {
+    font-family: 'Bacasime Antique';font-size: 32px;
+    background-color: rgb(103, 112, 104);
+}
+</style>
+    <meta charset="UTF-8" />
+    <title>RM Hunt Fine Art</title>
+  </head>
+  <body><center>
+    <p><center>R M Hunt Fine Art</center></p><br>
+    <center><img src="images/le.jpg" alt="Lands End" width="700" height="479"/></center>
+    &ensp;<p style="font-size:16px">Contact: rmhuntfineart(at)proton.me <br>&copy; 2025 R M Hunt Fine Art</p>
+  </body>
+  </center>
 </html>
