--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <link href='https://fonts.googleapis.com/css?family=Bacasime Antique' rel='stylesheet'>
+<meta name="author" content="R M Hunt">
+<meta name="description" content="Oil Paintings by R M Hunt">
+<meta name="keywords" content="oil, paintings, landscapes, nature, traditional, art, museum, gallery">
 <style>
   body      {
     font-family: 'Bacasime Antique';font-size: 32px;
