--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href='https://fonts.googleapis.com/css?family=Bacasime Antique' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=IM Fell French Canon SC' rel='stylesheet'>
 <meta name="author" content="R M Hunt">
 <meta name="description" content="Oil Paintings by R M Hunt">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, art, museum, gallery">
 <style>
   body      {
-    font-family: 'Bacasime Antique';font-size: 32px;
+    font-family: 'IM Fell French Canon SC';font-size: 38px;
     background-color: rgb(103, 112, 104);
 }
 </style>
@@ -15,9 +15,9 @@
     <title>RM Hunt Fine Art</title>
   </head>
   <body><center>
-    <p><center>R M Hunt Fine Art</center></p><br>
+    <font color="#bbb"><p><center>R M Hunt Fine Art</center></p></font><br>
     <center><img src="images/le.jpg" alt="Lands End" width="700" height="479"/></center>
-    &ensp;<p style="font-size:16px">Contact: rmhuntfineart(at)proton.me <br>&copy; 2025 R M Hunt Fine Art</p>
+    <font color="#bbb">&ensp;<p style="font-size:12px">Contact: rmhuntfineart(at)proton.me <br>&copy; 2025 R M Hunt Fine Art</p></font>
   </body>
   </center>
 </html>
