--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href='https://fonts.googleapis.com/css?family=IM Fell French Canon SC' rel='stylesheet'>
-<meta name="author" content="R M Hunt">
+<link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+<meta name="author" content="R M Hunt Fine Art Oil Paintings">
 <meta name="description" content="Oil Paintings by R M Hunt">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional, art, museum, gallery">
 <style>
   body      {
-    font-family: 'IM Fell French Canon SC';font-size: 38px;
+    font-family: 'Cinzel';font-size: 38px;
     background-color: rgb(103, 112, 104);
 }
 </style>
