--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
 <meta name="author" content="R M Hunt Fine Art Oil Paintings">
 <meta name="description" content="Oil Paintings by R M Hunt">
@@ -10,6 +11,17 @@
     font-family: 'Cinzel';font-size: 38px;
     background-color: rgb(103, 112, 104);
 }
+  /* For smart phones */
+@media screen and (max-width: 600px) {
+}
+
+/* For tablets */
+@media screen and (min-width: 600px) and (max-width: 900px) {
+}
+
+/* For desktop computers */
+@media screen and (min-width: 900px) {
+} 
 </style>
     <meta charset="UTF-8" />
     <title>RM Hunt Fine Art</title>
