--- a/new.html
+++ b/new.html
@@ -9,6 +9,10 @@
   body      {
     font-family: 'Cinzel';font-size: 38px;
     background-color: rgb(112, 120, 114);
+	
+}
+.underline {
+  border-bottom: 1px solid currentColor;
 }
 </style>
     <meta charset="UTF-8" />
@@ -17,8 +21,8 @@
 <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
   </head>
   <body><center>
-  <p><center>R M Hunt Fine Art</center></p><br>
-  <div class="swiffy-slider slider-indicators-round slider-indicators-dark slider-indicators-outside">
+  <font color="#fff"><p><center><span class="underline">R M Hunt Fine Art</span></center></p></font><br>
+  <div class="swiffy-slider slider-indicators-round slider-indicators-dark slider-indicators-outside slider-nav-animation slider-nav-animation-fadein">
     <ul class="slider-container">
         <li><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Oil Painting" width="842" height="479"/></li>
         <li><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur Oil Painting" width="700" height="479"/></li>
@@ -36,7 +40,7 @@
 </div>
     
     
-    &ensp;<p style="font-size:16px">Contact: rmhuntfineart(at)proton.me <br>&copy; 2025 R M Hunt Fine Art</p>
+    <font color="#fff">&ensp;<p style="font-size:16px">Contact: rmhuntfineart (at) proton.me <br>&copy; 2025 R M Hunt Fine Art</p></font>
   </body>
   </center>
 </html>
