--- a/new.html
+++ b/new.html
@@ -22,7 +22,7 @@
   </head>
   <body><center>
   <font color="#fff"><p><center><span class="underline">R M Hunt Fine Art</span></center></p></font><br>
-  <div class="swiffy-slider slider-indicators-round slider-indicators-dark slider-indicators-outside slider-nav-animation slider-nav-animation-fadein">
+  <div class="swiffy-slider slider-indicators-round slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein">
     <ul class="slider-container">
         <li><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Oil Painting" width="842" height="479"/></li>
         <li><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur Oil Painting" width="700" height="479"/></li>
