--- a/new.html
+++ b/new.html
@@ -17,8 +17,8 @@
 </style>
     <meta charset="UTF-8" />
     <title>RM Hunt Fine Art</title>
-	<script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
-<link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
+	<script src="https://roberthunt.com/assets/js/swiffy-slider.min.js"></script>
+<link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
   </head>
   <body><center>
   <font color="#fff"><p><center><span class="underline">R M Hunt Fine Art</span></center></p></font><br>
