--- a/new.html
+++ b/new.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet'>
+<meta charset="UTF-8" />
 <meta name="author" content="R M Hunt">
 <meta name="description" content="Oil Paintings by R M Hunt">
 <meta name="keywords" content="oil, paintings, landscapes, nature, traditional">
+<link href='https://fonts.googleapis.com/css?family=Cormorant SC' rel='stylesheet'>
+<link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
+<title>RM Hunt Fine Art - Fine Art Oil Paintings</title>
+<script src="https://roberthunt.com/assets/js/swiffy-slider.min.js"></script>
 <style>
   body      {
-    font-family: 'Cinzel';font-size: 38px;
+    font-family: 'Cormorant SC';font-size: 38px;
     background-color: rgb(112, 120, 114);
-	
-}
-.underline {
-  border-bottom: 1px solid currentColor;
-}
 </style>
-    <meta charset="UTF-8" />
-    <title>RM Hunt Fine Art</title>
-	<script src="https://roberthunt.com/assets/js/swiffy-slider.min.js"></script>
-<link href="https://roberthunt.com/css/swiffy-slider.min.css" rel="stylesheet">
-  </head>
-  <body><center>
-  <font color="#fff"><p><center><span class="underline">R M Hunt Fine Art</span></center></p></font><br>
-  <div class="swiffy-slider slider-indicators-round slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein">
+</head>
+<body><center>
+  <font color="#fff"><p><center>R  M Hunt Fine Art</center></p></font><br>
+  <div class="swiffy-slider slider-nav-chevron slider-indicators-round slider-indicators-outside slider-indicators-highlight slider-indicators-sm slider-nav-animation slider-nav-animation-fadein">
     <ul class="slider-container">
-        <li><img src="https://roberthunt.com/images/arch.jpg" alt="Morning at Arches National Park Oil Painting" width="842" height="479"/></li>
-        <li><img src="https://roberthunt.com/images/le.jpg" alt="Lands End Big Sur Oil Painting" width="700" height="479"/></li>
-        <li><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins Pond Oil Painting" width="654" height="479"/></li>
+        <li><img src="https://roberthunt.com/images/le.jpg" alt="Morning at Arches National Park Utah Oil Painting" width="700" height="479"/></li>
+        <li><img src="https://roberthunt.com/images/arch.jpg" alt="Lands End Big Sur California Oil Painting" width="842" height="479"/></li>
+        <li><img src="https://roberthunt.com/images/pond.jpg" alt="Robbins California Pond Oil Painting" width="654" height="479"/></li>
+		<li><img src="https://roberthunt.com/images/sea.jpg" alt="Calm Sea with Boats Oil Painting" width="706" height="479"/></li>
     </ul>
 
     <button type="button" class="slider-nav"></button>
@@ -36,11 +32,11 @@
         <button class="active"></button>
         <button></button>
         <button></button>
+	<button></button>
     </div>
 </div>
+    <br>
     
-    
-    <font color="#fff">&ensp;<p style="font-size:16px">Contact: rmhuntfineart (at) proton.me <br>&copy; 2025 R M Hunt Fine Art</p></font>
-  </body>
-  </center>
+    <font color="#fff">&ensp;<p style="font-size:16px">Inquiries: rmhuntfineart (at) proton.me <br>&copy; 2025 R M Hunt Fine Art</p></font>
+ </body></center>
 </html>
