--- a/new.html
+++ b/new.html
@@ -37,6 +37,6 @@
 </div>
     <br>
     
-    <font color="#fff">&ensp;<p style="font-size:16px">Inquiries: rmhuntfineart (at) proton.me <br>&copy; 2025 R M Hunt Fine Art</p></font>
+    <font color="#fff">&ensp;<p style="font-size:16px">Inquiries: info (at) roberthunt.com <br>&copy; 2025 R M Hunt Fine Art</p></font>
  </body></center>
 </html>
