--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body><center>
     <font color="#bbb"><p><center>R M Hunt Fine Art</center></p></font><br>
     <center><img src="images/le.jpg" alt="Lands End" width="700" height="479"/></center>
-    <font color="#bbb">&ensp;<p style="font-size:14px">Contact: rmhuntfineart (at) proton.me <br>&copy; 2025 R M Hunt Fine Art</p></font>
+    <font color="#bbb">&ensp;<p style="font-size:14px">Inquiries: info (at) roberthunt.com <br>&copy; 2025 R M Hunt Fine Art</p></font>
   </body>
   </center>
 </html>
